Adicionando Arquivos php de conexão ao banco e DAO genérico

--- a/src/php/LoginECadastro.html
+++ b/src/php/LoginECadastro.html
@@ -62,7 +62,7 @@
             <div id="cadastro" class="col-8 ml-2">
                 <h1>Cadastre-se</h1>
                 <p class="lead">Compre hardware na KabumTega!!</p>
-                <form action="">
+                <form action="" method="POST">
                     <div class="form-row">
                         
                         <div class="form-group col-6">
@@ -233,7 +233,7 @@
             <div id="login" class="col">
                <h1>Entrar</h1>
                <p class="lead">Já possui uma conta? Entre e vá para as compras!!</p>
-               <form action="">
+               <form action="" method="POST">
                     <div class="form-row">
                         <label for="inputEmail">Email:</label>
                         <input name="loginEmail" type="text" class="form-control" id="inputEmail">
