--- a/src/php/Navbar.html
+++ b/src/php/Navbar.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>MainPage</title>
+    <link rel="stylesheet" href="../style/mainpage.css">
     <link rel="stylesheet" href="../style/MeuStyle.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../style/MultiDropdown.css"> 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" id="navbarSKT">
-        <a class="navbar-brand" href="#">
-            <img src="../img/Kt.png"  width="40" height="40" class="d-inline-block-top mr-2" id="logo">KabumTega
+        <a class="navbar-brand" href="MainPage.html" style="font-size: 40px;">
+            <img src="../img/Kt.png"  width="50" height="50" class="d-inline-block-top mr-2" id="logo">KabumTega
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKT">
             <span class="navbar-toggler-icon"></span>
@@ -53,6 +54,18 @@
             </ul>
         </div>
     </nav>
+    <div class="searchContainer">
+            <div class="container">
+                <form class="ml-4 mr-4 my-auto d-inline w-100">
+                    <div class="input-group">
+                        <input type="text" class="form-control border-right-0" placeholder="Buscar"> 
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-primary border-left-0" type="button" id="btnSearch">IR</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     <div class="barra1"></div>
     <div class="barra2"></div>
     
