--- a/src/php/LoginECadastro.html
+++ b/src/php/LoginECadastro.html
@@ -75,7 +75,7 @@
             <div id="cadastro" class="col-8 ml-2">
                 <h1>Cadastre-se</h1>
                 <p class="lead">Compre hardware na KabumTega!!</p>
-                <form action="cadastroCliente.php" method="POST">
+                <form action="cadastroCliente.php" method="POST" enctype="multipart/form-data">
                     <div class="form-row">
                         
                         <div class="form-group col-6">
@@ -231,10 +231,8 @@
                                 <input name="cadastroCEP" type="number" class="form-control" id="inputCEP">
                             </div>
                             <div class="form-group col-4">
-                                <div class="form-group">
-                                    <label for="foto">Escolha uma foto:</label>
-                                    <input type="file" class="form-control-file" name="cadastroFoto" id="foto">
-                                </div>
+                                <label for="foto">Escolha uma foto:</label>
+                                <input type="file" name="cadastroFoto" id="foto">
                             </div>  
                     </div>
                     <div class="form-row">
