--- a/src/php/MainPage.html
+++ b/src/php/MainPage.html
@@ -52,7 +52,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Login/Register</a>
+                    <a class="nav-link" href="LoginECadastro.html">Login/Register</a>
                 </li>
             </ul>
         </div>
