Adding the products page

--- a/src/php/MainPage.html
+++ b/src/php/MainPage.html
@@ -27,16 +27,16 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <ul class="multi-column-dropdown">
-                                    <li><a href="#">Placa de vídeo</a></li>
-                                    <li><a href="#">Placa Mãe</a></li>
-                                    <li><a href="#">Processadores</a></li>
+                                    <li><a href="Produtos.php?type=Placadevideo">Placa de video</a></li>
+                                    <li><a href="Produtos.php?type=Placamae">Placa Mãe</a></li>
+                                    <li><a href="Produtos.php?type=Processador">Processadores</a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-6">
                                 <ul class="multi-column-dropdown">
-                                    <li><a href="#">Gabinete</a></li>
-                                    <li><a href="#">Cooler</a></li>
-                                    <li><a href="#">LED</a></li>
+                                    <li><a href="Produtos.php?type=Gabinete">Gabinete</a></li>
+                                    <li><a href="Produtos.php?type=Cooler">Cooler</a></li>
+                                    <li><a href="Produtos.php?type=Led">LED</a></li>
                                 </ul>
                             </div>
                         </div>                  
@@ -44,10 +44,10 @@
                 </li>
         
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Smartphones</a>
+                    <a class="nav-link" href="Produtos.php?type=Smartphones">Smartphones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Periféricos</a>
+                    <a class="nav-link" href="Produtos.php?type=Periferico">Periféricos</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -80,7 +80,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../img/geforce-rtx-2080-super-gallery-thumbnail-b-D@2x.png" class="ImageCarousel d-block w-100" alt="carouselRTX">
+                <img src="../img/2080ti.png" class="ImageCarousel d-block w-100" alt="carouselRTX">
             </div>
             <div class="carousel-item">
                 <img src="../img/HyperX-Cloud-Revolver-S-0.jpg" class="ImageCarousel d-block w-100" alt="carouselRevolver">
@@ -105,7 +105,7 @@
         <div class="recomendTitle"><a class="recomendados">Recomendados</a></div>
         <div class="card-deck">
             <div class="card">
-                <img src="../img/geforce-rtx-2080-super-gallery-thumbnail-b-D@2x.png" class="card-img-top" alt="...">
+                <img src="../img/2080ti.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">NVIDIA RTX 2080 TI</h5>
                     <p class="card-text">Essa é a placa de vídeo mais avançada já feita, possuí um poder de processamento de outro planeta! Além, é claro, da tecnologia RAY TRACING.</p>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/2002831.jpg" class="card-img-top" alt="...">
+                <img src="../img/I9K.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">I9-9900K Skylake</h5>
                     <p class="card-text">Experimente o que é poder de processamento com a nova linha de processadores I9 da 9ª geração. Diga adeus aos gargalos!</p>
