--- a/src/php/Navbar.html
+++ b/src/php/Navbar.html
@@ -24,16 +24,16 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <ul class="multi-column-dropdown">
-                                    <li><a href="#">Placa de video</a></li>
-                                    <li><a href="#">Placa Mãe</a></li>
-                                    <li><a href="#">Processadores</a></li>
+                                    <li><a href="Produtos.php?type=Placadevideo">Placa de video</a></li>
+                                    <li><a href="Produtos.php?type=Placamae">Placa Mãe</a></li>
+                                    <li><a href="Produtos.php?type=Processador">Processadores</a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-6">
                                 <ul class="multi-column-dropdown">
-                                    <li><a href="#">Gabinete</a></li>
-                                    <li><a href="#">Cooler</a></li>
-                                    <li><a href="#">LED</a></li>
+                                    <li><a href="Produtos.php?type=Gabinete">Gabinete</a></li>
+                                    <li><a href="Produtos.php?type=Cooler">Cooler</a></li>
+                                    <li><a href="Produtos.php?type=Led">LED</a></li>
                                 </ul>
                             </div>
                         </div>                  
@@ -41,10 +41,10 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Smartphones</a>
+                    <a class="nav-link" href="Produtos.php?type=Smartphones">Smartphones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Periféricos</a>
+                    <a class="nav-link" href="Produtos.php?type=Periferico">Periféricos</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
