Crud e Sessão prontos

--- a/src/php/LoginECadastro.html
+++ b/src/php/LoginECadastro.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="../img/Kt.png">
 </head>
 <body id="pageCadastro">
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light" id="navbarSKT">
         <a class="navbar-brand" href="MainPage.html" style="font-size: 40px;">
             <img src="../img/Kt.png"  width="50" height="50" class="d-inline-block-top mr-2" id="logo">KabumTega
@@ -69,9 +70,10 @@
     <div class="barra1"></div>
     <div class="barra2"></div>
     
+
     <div class="container my-5" id="test">    
         <div class="row">
-
+            <!-- Form Cadstro -->
             <div id="cadastro" class="col-8 ml-2">
                 <h1>Cadastre-se</h1>
                 <p class="lead">Compre hardware na KabumTega!!</p>
@@ -240,7 +242,7 @@
                     </div>
                 </form>
             </div>
-
+            <!-- Form Login -->
             <div id="login" class="col">
                <h1>Entrar</h1>
                <p class="lead">Já possui uma conta? Entre e vá para as compras!!</p>
