--- a/src/php/LoginECadastro.html
+++ b/src/php/LoginECadastro.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light" id="navbarSKT">
         <a class="navbar-brand" href="MainPage.html" style="font-size: 40px;">
-            <img src="../img/Kt.png"  width="50" height="50" class="d-inline-block-top mr-2" id="logo">KabumTega
+            <img src="../img/Kt.png"  width="50" height="50" class="d-inline-block-top mr-2" id="logo">KabumTri
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKT">
             <span class="navbar-toggler-icon"></span>
@@ -76,7 +76,7 @@
             <!-- Form Cadstro -->
             <div id="cadastro" class="col-8 ml-2">
                 <h1>Cadastre-se</h1>
-                <p class="lead">Compre hardware na KabumTega!!</p>
+                <p class="lead">Compre hardware na KabumTri!!</p>
                 <form action="cadastroCliente.php" method="POST" enctype="multipart/form-data">
                     <div class="form-row">
                         
@@ -263,7 +263,7 @@
         </div>
     </div>
 
-    <footer id="cadastroLogin">&copy; KambumTega</footer>
+    <footer id="cadastroLogin">&copy; KambumTri</footer>
 
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <script src="../node_modules/popper.js/dist/umd/popper.js"></script>
