--- a/src/php/index.html
+++ b/src/php/index.html
@@ -5,5 +5,7 @@
   <title>KabumTri</title>
  </head>
  <body>
-  window.location.replace(MainPage.php);
+ 	<script>
+ 	window.location.href = "MainPage.php";
+ 	</script>
  </body>
